[metadata]
name = django-easy-maps
version = 1.1.3
description = This app makes it easy to display a map for a given address
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mikhail Korobov
author_email = kmike84@gmail.com
maintainer = Basil Shubin
maintainer_email = basil.shubin@gmail.com
url = https://github.com/bashu/django-easy-maps
download_url = https://github.com/bashu/django-easy-maps/zipball/master
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django-classy-tags>=0.6.2
    django-appconf
    geopy>=0.96

[options.packages.find]
exclude = example*

[options.extras_require]
develop =
    tox
    mock
    django
    pytest-django
    pytest
test =
    pytest-django
    pytest-cov
    pytest
    mock

[bdist_wheel]
# No longer universal (Python 3 only) but leaving this section in here will
# trigger zest to build a wheel.
universal = 0

[flake8]
# Some sane defaults for the code style checker flake8
# black compatibility
max-line-length = 88
# E203 and W503 have edge cases handled by black
extend-ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[tool:pytest]
DJANGO_SETTINGS_MODULE = easy_maps.tests.settings
